# mountix-serverless

./: Cargo.toml  README.md  template.yaml
src/: lib.rs  main.rs
src/models/: mod.rs  mountain_model.rs  prefecture_model.rs  tag_model.rs
src/repositories/: mod.rs  mountain_repository.rs
src/services/: mod.rs  mountain_service.rs
