[package]
name = "mountix-serverless"
version = "0.1.0"
edition = "2021"
authors = ["codemountains <codemountains@gmail.com>"]
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = "0.2.0"
aws-sdk-dynamodb = "0.2.0"
lambda_http = "0.4.1"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
